Outliner: Cyclic "Original ID" panel in Data API #82452

Closed
opened 2020-11-06 07:07:27 +01:00 by 炎臻 · 7 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-06 00:11, hash: c99c02d3ba
Worked: (newest version of Blender that worked as expected)

Short description of error
"Original ID" subpanel shows in "Original ID" panel,forming cyclic panels.
Cyclic Original ID panel.png

Exact steps for others to reproduce the error

  • Start blender and have the default scene.
  • Change Outliner mode into Data API.
  • Unfold "objects",then "Camera"."Original ID" row can be found in the subpanel.
  • Unfold the "Original ID",the same "Camera" data will show up and in that one's subpanel there is another "Original ID" row.
  • They can then be continuously unfolded.
**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.92.0 Alpha, branch: master, commit date: 2020-11-06 00:11, hash: `c99c02d3ba` Worked: (newest version of Blender that worked as expected) **Short description of error** "Original ID" subpanel shows in "Original ID" panel,forming cyclic panels. ![Cyclic Original ID panel.png](https://archive.blender.org/developer/F9215920/Cyclic_Original_ID_panel.png) **Exact steps for others to reproduce the error** - Start blender and have the default scene. - Change Outliner mode into Data API. - Unfold "objects",then "Camera"."Original ID" row can be found in the subpanel. - Unfold the "Original ID",the same "Camera" data will show up and in that one's subpanel there is another "Original ID" row. - They can then be continuously unfolded.
Author

Added subscriber: @PrettyFireNOI7

Added subscriber: @PrettyFireNOI7
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm the behavior, but I doubt this would be classified a bug.

There were other cases though were this could happen, I recall pre-2.79 you could browse RNA with multiple ways to run into recursion.
2.79 removed browsing the RNA of datablocks, maybe for the same reason?

Can confirm the behavior, but I doubt this would be classified a bug. There were other cases though were this could happen, I recall pre-2.79 you could browse RNA with multiple ways to run into recursion. 2.79 removed browsing the RNA of datablocks, maybe for the same reason?

This issue was referenced by 774d18804f

This issue was referenced by 774d18804fe3de51c601f3f0684218cd6af1db09

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2020-11-26 10:48:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82452
No description provided.