Fix T82452: Outliner: Cyclic "Original ID" panel in Data API.

I cannot think of any case where we'd want to show this pointer in UI
anyway, so just tag it with `PROP_HIDDEN`.